@startuml ChainlinkSwapUML

class ChainlinkSwap {
	- ChainlinkOracle oracle
	- RouterWrapper routerWrapper

	+ bool swapFromETH(address tokenOut) [payable]
	+ bool swapToETH(address tokenIn, uint256 amount)
}

class ChainlinkOracle {
	- IAggregatorV3 baseFeed
	- IAggregatorV3 quoteFeed

	+ uint256 getBasePrice()
	+ uint256 getQuotePrice()
}

class RouterWrapper {
	- ISwapRouter router

	+ void swapFromETH(address weth,address token,uint256 amountOutMin) [payable]
	+ void swapToETH(address token,address weth,uint256 amountToken,uint256 amountOutMin)
}

interface ISwapRouter {
	+ uint256 exactInput()
	+ void unwrapWETH9()
	+ void multicall()
}
hide ISwapRouter attributes

interface IAggregatorV3 {
	+ uint8 decimals()
	+ (,int256 price,,,) latestRoundData()
}
hide IAggregatorV3 attributes

ChainlinkSwap --> ChainlinkOracle
ChainlinkSwap --> RouterWrapper
RouterWrapper ..> ISwapRouter
ChainlinkOracle ..> IAggregatorV3

class User << Test >> {
	- ChainlinkSwap swap
	
	+ bool swapFromETH(address tokenOut, uint256 amount)
	+ bool swapToETH(address tokenIn, uint256 amount)
}
User -> ChainlinkSwap

@enduml

' https://plantuml.com/class-diagram
